--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "node -r dotenv/config ./scripts/seed.js"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
     "@mui/material": "^5.15.0",
+    "@vercel/postgres": "^0.5.1",
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.3.1",
     "next": "14.0.4",
     "openai": "^4.22.1",
     "react": "^18",
