--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "next": "14.0.4",
+    "next-auth": "^4.24.5",
     "openai": "^4.22.1",
     "react": "^18",
     "react-dom": "^18"
